--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,7 @@ button {outline: none; background: none;}
 
 
 /* Header */
-#header {background: #fff}
+/* #header {background: #fff} */
 #header.on {position: fixed; width: 100%; background: #fff; top: 0; left: 0; z-index: 999999;} 
 #header h1 {background:#5c4915; padding: 5px 10px 15px; 
             margin: 10px 0 10px 20px; display: inline-block;}
@@ -18,7 +18,7 @@ button {outline: none; background: none;}
 .nav .depth1 > li:hover > a {color: #88702b}
 .nav .depth2 {position: absolute; top: 100%; left: 0; width: 160px; transition: all 0.5s;
               z-index: 999; background: #fff; display: none;}
-.nav .depth1 > li:hover .depth2 {display: block; }
+/* .nav .depth1 > li:hover .depth2 {display: block; } */
 .nav .depth2 > li > a {padding: 13px 20px; display: block; font-size: 15px; 
                        color: #555; transition: all 0.5s;}
 .nav .depth2 > li:hover a {background: #88702b; color:#fff}
@@ -28,7 +28,7 @@ button {outline: none; background: none;}
 
 
 /* Footer */
-#footer {margin-top: 150px;}
+#footer {margin-top: 80px;}
 .info {background: #222; padding: 10px 0 15px 0; color: #ccc; }
 .infofst {display: flex; justify-content: space-between; }
 .infofst img {width: 130px; padding: 10px 0 20px;}
