--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,7 @@ button {outline: none; background: none;}
                            height: 700px; background-size: cover;}
 .slide_group1 .slide4 .img{background: url(../img/slide1.jpg) no-repeat center;
                            height: 700px; background-size: cover;}
-.slide_group1 .slide5 .img{background: url(../img/slide2.jpg) no-repeat center;
+.slide_group1 .slide5 .img{background: url(../img/slide4.jpg) no-repeat center;
                            height: 700px; background-size: cover;}
 .slide_group1 .slide.slick-active .img {animation: slideImg 5s both;}                           
 @keyframes slideImg {from {transform: scale3d(1,1,1)} to {transform: scale3d(1.3,1.3,1.3)}}                          
@@ -48,3 +48,78 @@ button {outline: none; background: none;}
 @keyframes barani {from {width: 0;} to {width: 70px;}}
 #article1 .playstop {position: absolute; bottom: 45px; left: 50%; margin-left: 210px; color:rgba(255,255,255,0.2); 
                      border: none; background: none; font-size: 14px;}
+
+
+/* article2 */
+#article2 {margin: 120px 0;}
+#article2 > h2 {text-align: center;  color: #333; font-size: 35px; font-weight: 600; 
+                line-height: 50px; position:relative;}
+#article2 > h2::before {content:''; width: 120px; height: 3px; background: #88702b;
+                        position: absolute; top: 0px; left: 50%; transform: translate(-50%); }
+#article2 > p {text-align: center; color: #777; font-size: 17px; font-weight: 400;
+               padding-top: 19px; margin-bottom: 50px;}
+#article2 ul {display: flex; flex-wrap: nowrap; justify-content: space-around;}
+.aboutbox {text-align: center; margin-right: 2%; margin-top: 10px; width: 32%;}
+.aboutbox img {width: 100%; height: 310px;}
+.imgbox {position: relative; overflow: hidden;}
+.imgbox .line {position: absolute; top: 10px; bottom: 10px; right: 10px; left: 10px; }
+.imgbox .line .topline {position: absolute; left: 0; right: 100%; top:0;
+                        height: 2px; background: #fff; z-index: 999999;
+                        transition: all 0.5s ease-out;}
+.imgbox .line .bottomline {position: absolute; left: 100%; right: 0; bottom: 0;
+                           height: 2px; background: #fff; z-index: 999999;
+                           transition: all 0.5s ease-out;}
+.imgbox .line .leftline {position: absolute; right: 0; top: 100%; bottom: 0;
+                         width: 2px; background: #fff; z-index: 999999;
+                         transition: all 0.5s ease-out;}
+.imgbox .line .rightline {position: absolute; left: 0; top: 0; bottom: 100%;
+                          width: 2px; background: #fff; z-index: 999999;
+                          transition: all 0.5s ease-out;}
+.imgbox:hover .line .topline {right: 0}
+.imgbox:hover .line .bottomline {left: 0;}
+.imgbox:hover .line .leftline {top: 0;}
+.imgbox:hover .line .rightline {bottom: 0;}
+.imgbox::before {content: ''; position: absolute; top: 0; left: 0; bottom: 0; right: 0;
+                 background: rgba(0,0,0,0); transition: all 0.5s; z-index: 1} 
+.imgbox:hover::before {background: rgba(0,0,0,0.5);} 
+.imgbox .sbox {position: absolute; z-index: 2; top: 50%; left: 50%; 
+               transform: translate(-50%, -50%); opacity: 0; transition: all 0.5s;}
+.imgbox:hover .sbox {opacity: 1;}
+.imgbox .sbox p:nth-child(1) {font-size: 15px; line-height: 1.2; color: #fff;}
+.imgbox .sbox p:nth-child(2) {font-size: 24px; line-height: 1.2; padding-top: 8px; font-weight: 700; 
+                              padding-bottom: 18px; color: #fff;}
+.imgbox img {transition: all 0.5s;} 
+.imgbox:hover img {transform: scale(1.4);}
+/* #article2 h2, #article2 p, #article2 .aboutbox 
+{opacity: 0.6; -webkit-transform: translate3d(0, 100%, 0); 
+    transform: translate3d(0, 100%, 0); transition: all 0.3s}  
+#article2.on h2 {animation: fadeInUp 0.3s both}
+#article2.on p {animation: fadeInUp 0.3s both 0.3s}
+#article2.on ul li:nth-child(1) {animation: fadeInUp 0.3s both 0.6s}
+#article2.on ul li:nth-child(2) {animation: fadeInUp 0.3s both 0.8s}
+#article2.on ul li:nth-child(3) {animation: fadeInUp 0.3s both 1s}  */
+
+/* article3 */
+#article3 {height: 300px; background: url(../img/drawing.jpg) no-repeat;
+            background-attachment: fixed; background-size: cover; 
+             position: relative;}
+#article3::before {content: ''; background: rgba(104, 89, 43, 0.1);
+            position: absolute; top: 0; left: 0; right: 0; bottom: 0;}
+#article3 .fxment {position: absolute; top: 50%; left: 50%; text-align: center; 
+                transform: translate(-50%, -50%); color: #6f591e; width: 100%;}
+#article3 h3 {font-size: 22px; font-weight: 700; padding-bottom: 23px;}            
+#article3 p {font-size: 24px; color: #333; }
+#article3 button {background: #8b6d1a; color: #fff; padding: 13px 35px;
+                    margin-top: 40px; font-size: 16px; transition: all 0.5s;}
+#article3 button:hover {background: #594611; cursor: pointer;}
+#article3 button i {padding-right: 10px;}       
+
+
+/* article4 */
+#article4 {margin: 120px 0}
+#article4 > h2 {text-align: center;  color: #333; font-size: 35px; font-weight: 600; 
+    line-height: 50px; position:relative;}
+#article4 > h2::before {content:''; width: 120px; height: 3px; background: #88702b;
+            position: absolute; top: 0px; left: 50%; transform: translate(-50%); }
+#article4 > p {text-align: center; color: #777; font-size: 17px; font-weight: 400;
+   padding-top: 19px; margin-bottom: 50px;}
