--- a/css/index.css
+++ b/css/index.css
@@ -119,12 +119,11 @@ button {outline: none; background: none;}
 /* article4 */
 #article4 {margin: 120px 0}
 #article4 > h2 {text-align: center;  color: #6f591e; font-size: 35px; font-weight: 600; 
-    line-height: 50px; position:relative;}
+                line-height: 50px; position:relative;}
 #article4 > h2::before {content:''; width: 100px; height: 3px; background: #88702b;
             position: absolute; top: 0px; left: 50%; transform: translate(-50%); }
 #article4 > p {text-align: center; color: #777; font-size: 17px; font-weight: 400;
-   padding-top: 19px; margin-bottom: 50px;}
-
+                padding-top: 19px; margin-bottom: 50px;}
 
 /* sub페이지 공통 */
 .topimg .toptit {position: absolute; width: 100%; position: absolute; top: 50%; left: 50%; text-align: center; 
@@ -162,9 +161,9 @@ button {outline: none; background: none;}
 
 
 /* location 페이지 */
-.lomap {text-align: center; margin: 120px 0;}
+.lomap { margin: 120px 0;}
 .lobox {background: rgb(250, 250, 250);}
-
+.root_daum_roughmap { margin: auto !important; }
 
 /* rooms 페이지*/
 #rocont {margin: 120px 0;}
