--- a/css/index.css
+++ b/css/index.css
@@ -58,8 +58,10 @@ button {outline: none; background: none;}
                         position: absolute; top: 0px; left: 50%; transform: translate(-50%); }
 #article2 > p {text-align: center; color: #777; font-size: 17px; font-weight: 400;
                padding-top: 19px; margin-bottom: 50px;}
-#article2 ul {display: flex; flex-wrap: nowrap; justify-content: space-around;}
-.aboutbox {text-align: center; margin-right: 2%; margin-top: 10px; width: 32%;}
+#article2 ul {overflow: hidden;}
+.aboutbox {width: 32%; text-align: center; margin-right: 2%;
+            margin-top: 10px; float: left; }
+.aboutbox:nth-of-type(3) {margin-right: 0;}
 .aboutbox img {width: 100%; height: 310px;}
 .imgbox {position: relative; overflow: hidden;}
 .imgbox .line {position: absolute; top: 10px; bottom: 10px; right: 10px; left: 10px; }
@@ -90,14 +92,6 @@ button {outline: none; background: none;}
                               padding-bottom: 18px; color: #fff;}
 .imgbox img {transition: all 0.5s;} 
 .imgbox:hover img {transform: scale(1.4);}
-/* #article2 h2, #article2 p, #article2 .aboutbox 
-{opacity: 0.6; -webkit-transform: translate3d(0, 100%, 0); 
-    transform: translate3d(0, 100%, 0); transition: all 0.3s}  
-#article2.on h2 {animation: fadeInUp 0.3s both}
-#article2.on p {animation: fadeInUp 0.3s both 0.3s}
-#article2.on ul li:nth-child(1) {animation: fadeInUp 0.3s both 0.6s}
-#article2.on ul li:nth-child(2) {animation: fadeInUp 0.3s both 0.8s}
-#article2.on ul li:nth-child(3) {animation: fadeInUp 0.3s both 1s}  */
 
 
 /* article3 */
