--- a/css/rwdsetting.css
+++ b/css/rwdsetting.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 890px) {
+/* @media screen and (max-width: 890px) {
     .nav {margin-right: 100px;}
     .aboutbox img {height: 290px;}
     .subtxt {padding: 20px 120px; }
@@ -21,4 +21,4 @@
 }
 @media screen and (max-width: 600px) {
     .root_daum_roughmap {height: 270px}
-}
+} */
