--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,7 @@ button {outline: none; background: none;}
 
 
 /* article3 */
-#article3 {height: 300px; background: url(../img/drawing.jpg) no-repeat;
+#article3 {height: 300px; background: url(../img/scroll.jpg) no-repeat;
             background-attachment: fixed; background-size: cover; 
              position: relative;}
 #article3::before {content: ''; background: rgba(104, 89, 43, 0.1);
@@ -103,7 +103,7 @@ button {outline: none; background: none;}
 #article3 .fxment {position: absolute; top: 50%; left: 50%; text-align: center; 
                 transform: translate(-50%, -50%); color: #6f591e; width: 100%;}
 #article3 h3 {font-size: 22px; font-weight: 700; padding-bottom: 23px;}            
-#article3 p {font-size: 24px; color: #333; }
+#article3 p {font-size: 24px; color: #eee; }
 #article3 button {background: #8b6d1a; color: #fff; padding: 13px 35px;
                     margin-top: 40px; font-size: 16px; transition: all 0.5s;}
 #article3 button:hover {background: #594611; cursor: pointer;}
