--- a/css/index.css
+++ b/css/index.css
@@ -41,12 +41,12 @@ button {outline: none; background: none;}
 .slide_group1 .prev:hover, .slide_group1 .next:hover {background:rgba(255,255,255,0.7); color:#333}                    
 .slide_group1 .slick-dots {position: absolute; bottom: 50px; left: 0; right: 0; text-align: center;}
 .slide_group1 .slick-dots li {display: inline-block; margin: 0 5px; width: 70px; height: 4px; 
-                              background:rgba(255,255,255,0.2); position: relative;}
-.slide_group1 .slick-dots li button {width: 0px; height: 4px; background: #96740d; text-indent: -9999px; 
+                              background:rgba(255,255,255,0.8); position: relative;}
+.slide_group1 .slick-dots li button {width: 0px; height: 4px; background: #d0a31c; text-indent: -9999px; 
                                      border: none; overflow: hidden; position: absolute; top: 0; left: 0;}
 .slide_group1 .slick-dots li.slick-active button {animation: barani 3s both;}
 @keyframes barani {from {width: 0;} to {width: 70px;}}
-#article1 .playstop {position: absolute; bottom: 45px; left: 50%; margin-left: 210px; color:rgba(255,255,255,0.2); 
+#article1 .playstop {position: absolute; bottom: -35px; left: 50%; margin-left: 210px; color:rgba(255,255,255,0.8); 
                      border: none; background: none; font-size: 14px;}
 
 
