--- a/css/rwdsetting.css
+++ b/css/rwdsetting.css
@@ -1,24 +1,29 @@
-/* @media screen and (max-width: 890px) {
-    .nav {margin-right: 100px;}
-    .aboutbox img {height: 290px;}
-    .subtxt {padding: 20px 120px; }
-}
 @media screen and (max-width: 768px) {
-    .slide_group1 .slidetext p {font-size: 21px;}
-    .slide_group1 .slidetext h2 {font-size: 36px}
-    #article3 {height: 270px;}
-    .aboutbox img {height: 260px;}
-    #article3 h3 {font-size: 18px;}
-    #article3 p {font-size: 20px;}
-    #article3 button {padding: 10px 30px; font-size: 14px;}
-    .root_daum_roughmap {height: 310px}
-    .subtxt h2 {font-size: 22px;}
-    .subtxt {padding: 20px 100px; }
-    .roomlist {font-size: 17px;}
-    .slide_group2 .prev {left: 12px}
-    .slide_group2 .next {right: 12px}
+    #header h1 {padding-right: 5px; margin-right: 8px;}
+    #header .nav {margin-right: 8px; font-size: 17px;}
+    #article1 {height: 650px; overflow: hidden;}
+    .slide_group1 .slidetext {top: 45%}
+    .slide_group1 .slide1 .img {height: 650px;}
+    .slide_group1 .slide2 .img {height: 650px;}
+    .slide_group1 .slide3 .img {height: 650px;}
+    .slide_group1 .slide4 .img {height: 650px;}
+    .slide_group1 .slidetext p {font-size: 24px;}
+    .slide_group1 .slidetext h2  {font-size: 32px;}
+    .slide_group1 .slick-arrow {display: none;}
+    .slide_group1 .slick-dots {bottom: 160px;}
+    .slide_group1 .slick-dots li {width: 30px;}
+    @keyframes barani {from {width: 0;} to {width: 30px;}}
+    #article1 .playstop {display: none;}
 
+    #article2 {margin: 120px 0;}
+    .aboutbox img {width: 100%; height: 260px;}
+
+    #article3 {height: 250px;}
+    #article3 h3 {font-size: 19px;}
+    #article3 p {font-size: 22px;}
+    #article3 button {font-size: 14px; padding: 10px 26px;}
+
+    .toptitr h2 {font-size: 32px;}
+
+    .subtxt {padding: 20px 85px; }
 }
-@media screen and (max-width: 600px) {
-    .root_daum_roughmap {height: 270px}
-} */
